--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             #id_right {
                 margin-top: 50px;
             }
+
+            .jumbotron {
+                padding-left: 0px;
+                padding-right: 0px;
+            }
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -98,9 +103,38 @@
                 <!-- Main jumbotron for a primary marketing message or call to action -->
                 <div class="jumbotron">
                   <div class="container">
-                    <h1>Hello, world!</h1>
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p><a class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+                      <!-- Nav tabs -->
+                      <ul class="nav nav-tabs" id="myTab">
+                          <li><a href="#id_canvas_settings" data-toggle="tab">Canvas</a></li>
+                          <li><a href="#profile" data-toggle="tab">Profile</a></li>
+                          <li><a href="#messages" data-toggle="tab">Messages</a></li>
+                          <li><a href="#settings" data-toggle="tab">Settings</a></li>
+                      </ul>
+                      <!-- Tab panes -->
+                      <div class="tab-content">
+                          <div class="tab-pane active fade" id="id_canvas_settings">
+                              <nav class="navbar navbar-default" role="navigation">
+                                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                                      <form class="navbar-form navbar-left" role="canvas height">
+                                          <a class="navbar-brand" href="#">Height</a>
+                                          <div class="form-group">
+                                              <input id="id_canvas_height" type="text" class="form-control" placeholder="Height of the canvas">
+                                          </div>
+                                      </form>
+                                      <form class="navbar-form navbar-left" role="canvas height">
+                                          <a class="navbar-brand" href="#">Width</a>
+                                          <div class="form-group">
+                                              <input id="id_canvas_width" type="text" class="form-control" placeholder="Width of the canvas">
+                                          </div>
+                                          <!--<button type="submit" class="btn btn-default">Submit</button>-->
+                                      </form>
+                                  </div>
+                              </nav>
+                          </div>
+                          <div class="tab-pane fade" id="profile">...</div>
+                          <div class="tab-pane fade" id="messages">...</div>
+                          <div class="tab-pane fade" id="settings">...</div>
+                      </div>
                   </div>
                 </div>
 
