--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                 left: 0;
             }
 
+             #id_right {
+                position: absolute;
+                left:     50%;
+                top:      50%;
+                width: 100%;
+                height: 100%;
+            }
+
             @media screen and (max-width: 1024px) { /* Specific to this particular image */
                 #id_splitter {
                     left: 50%;
@@ -40,6 +48,8 @@
 
             #id_right {
                 margin-top: 50px;
+                background-color: #000000;
+
             }
 
             .jumbotron {
@@ -50,6 +60,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/jquery.splitter.css">
+        <link rel="stylesheet" href="js/vendor/plugins/select2-3.4.5/select2.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -57,7 +68,7 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-        <div id="id_splitter">
+        <div id="id_splitter" class="splitter_panel">
             <div id="id_left">
                 <div class="navbar navbar-inverse navbar-fixed-top">
                   <div class="container">
@@ -116,15 +127,24 @@
                               <nav class="navbar navbar-default" role="navigation">
                                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                                       <form class="navbar-form navbar-left" role="canvas height">
+                                          <a class="navbar-brand" href="#">Aspect ratio</a>
+                                          <div class="form-group">
+                                              <select id="id_canvas_aspect_ratio">
+                                                  <option value="4/3">4/3</option>
+                                                  <option value="16/9">16/9</option>
+                                              </select>
+                                          </div>
+                                      </form>
+                                      <form class="navbar-form navbar-left" role="canvas height">
                                           <a class="navbar-brand" href="#">Height</a>
                                           <div class="form-group">
-                                              <input id="id_canvas_height" type="text" class="form-control" placeholder="Height of the canvas">
+                                              <input id="id_canvas_height" value="300" type="text" class="form-control" placeholder="Height of the canvas">
                                           </div>
                                       </form>
                                       <form class="navbar-form navbar-left" role="canvas height">
                                           <a class="navbar-brand" href="#">Width</a>
                                           <div class="form-group">
-                                              <input id="id_canvas_width" type="text" class="form-control" placeholder="Width of the canvas">
+                                              <input id="id_canvas_width" value="400" type="text" class="form-control" placeholder="Width of the canvas">
                                           </div>
                                           <!--<button type="submit" class="btn btn-default">Submit</button>-->
                                       </form>
@@ -166,7 +186,7 @@
                 </div>
             </div>
             <div id="id_right">
-                <canvas id="myCanvas" width="500" height="300">
+                <canvas id="myCanvas" width="400" height="300">
                     alternate content
                 </canvas>
             </div>
@@ -180,6 +200,7 @@
         <script src="js/vendor/createjs-2013.12.12.min.js"></script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/plugins/select2-3.4.5/select2.js"></script>
 
         <script src="js/main.js"></script>
 
